Fix jumbotron colour on IE9

--- a/jerix.co.uk/eso/templates/less/bootstrap/jumbotron.less
+++ b/jerix.co.uk/eso/templates/less/bootstrap/jumbotron.less
@@ -17,8 +17,6 @@
   background: -ms-linear-gradient(45deg, #002600 0%,#2d602f 100%); /* IE10+ */
   background: linear-gradient(45deg, #002600 0%,#2d602f 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002600', endColorstr='#2d602f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002600', endColorstr='#3e8445',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
      -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
           box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
